tests/compile-fail/stacked_borrows/return_invalid_mut_tuple.stderr
error: Undefined Behavior: trying to reborrow <1906> for Unique permission at alloc953[0x4], but that tag does not exist in the borrow stack for this location
  --> $DIR/return_invalid_mut_tuple.rs:11:5
   |
LL |     foo(&mut (1, 2)).0; //~ ERROR: borrow stack
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     trying to reborrow <1906> for Unique permission at alloc953[0x4], but that tag does not exist in the borrow stack for this location
   |     this error occurs as part of a reborrow at alloc953[0x4..0x8]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `main` at $DIR/return_invalid_mut_tuple.rs:11:5

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

